kubernetes/000-profile-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: profile
  labels:
    name: profile
---
