kubernetes/020-profile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  namespace: profile
  labels:
    app: profile
spec:
  selector:
    matchLabels:
      app: profile
  replicas: 1
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
      - name: profile
        image: ${PROFILE_IMAGE}:${PROFILE_IMAGETAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 3005
          name: api
        volumeMounts:
        - name: profile-data
          mountPath: /app/data/
      volumes:
        - name: profile-data
          persistentVolumeClaim:
            claimName: profile-data
      restartPolicy: Always
---
